# eudaq-1

./: .gitignore
main/lib/python/src/: PybindProducer.cc
user/: CMakeLists.txt
user/caribou/module/include/: CaribouEvent2StdEventConverter.hh
user/caribou/module/src/: CaribouProducer.cxx  mpw3eventconverter.cpp
user/elog_producer/: CMakeLists.txt  README.md
user/elog_producer/misc/: elog.conf  elog_rc.ini
user/elog_producer/module/: CMakeLists.txt
user/elog_producer/module/include/: elog.h  eloggui.h  elogproducer.h  producer2guiproxy.h
user/elog_producer/module/src/: elog.cc  eloggui.cpp  elogproducer.cpp  euElog.cxx  producer2guiproxy.cpp
user/elog_producer/module/ui/: eloggui.ui  elogproducer.ui
user/elog_run_ctrl/: CMakeLists.txt
user/elog_run_ctrl/include/: elog.h  elogrunctrl.h
user/elog_run_ctrl/misc/: elog_rc.ini
user/elog_run_ctrl/module/: CMakeLists.txt
user/elog_run_ctrl/module/include/: elog.h  elogrunctrl.h
user/elog_run_ctrl/module/src/: elog.cc  elogrunctrl.cpp
user/elog_run_ctrl/module/ui/: elogrunctrl.ui
user/elog_run_ctrl/src/: elog.cc  elogrunctrl.cpp
user/keithly_producer/: KeithleyProducer.py  setup_eudaq.sh
user/monopix2/: CMakeLists.txt  README.md
user/monopix2/misc/: monopix2_gui.config  monopix2_template.conf  monopix2_template.ini  start.sh  start_full_setup.sh
user/monopix2/module/: CMakeLists.txt
user/monopix2/module/include/: defs.h
user/monopix2/module/src/: debugFileWriter.cc  monopix2Event2StdEventConverter.cc  monopix2Producer.cc
user/mpw3DataCollector/: CMakeLists.txt
user/mpw3DataCollector/module/include/: XilinxEudaqInterface.h  mpw3_datacollector.h
user/mpw3DataCollector/module/src/: XilinxEudaqInterface.cpp  mpw3DataCollector.cc
user/mpw3DataCollector/module/tools/: Defs.cpp  Defs.h  EpicsLogger.cpp  EpicsLogger.h  Logger.h  RequestHandler.h  TCPAcceptor.cpp  TCPAcceptor.h  TCPConnector.cpp  TCPStream.h  TimeStamp.h  UDPAcceptor.h  UDPStream.cpp
user/mpw3DataCollector/module/tools/unused/: ChannelAccess.cpp  ChannelAccess.h  DBRInfoStream.h  PSChannel.h
user/mpw3_gui/: CMakeLists.txt  configcreator.cpp  configcreator.h  configcreator.ui  controller.cpp  controller.h  controller.ui  defaults.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitorview.cpp  monitorview.h  monitorview.ui  mpw3_monitor.cc  mpw3_monitor.h  mpw3_qt_if.cpp  mpw3_qt_if.h  mpw3eventconverter.cpp  mpw3eventconverter.h
user/mpw3_gui/misc/: config_items.txt
user/mpw3_gui/misc/demo_caribou/: mpw3_demo.conf  mpw3_demo.ini  start_mpw3_demo.sh
user/mpw3_gui/misc/demo_ex0/: mpw3_demo.conf  start_mpw3_demo.sh
user/rd50_mpw3/: CMakeLists.txt  README.md
user/rd50_mpw3/module/: CMakeLists.txt
user/rd50_mpw3/module/include/: Event_t.h  XilinxEudaqInterface.h  defs.h  mpw3FileReader.h  mpw3_datacollector.h
user/rd50_mpw3/module/src/: XilinxEudaqInterface.cpp  mpw3DataCollector.cc  mpw3DebugFileWriter.cc  mpw3Event2StdEventConverter.cc  mpw3FileReader.cc  mpw3FileWriter.cc  mpw3FrameEvent2StdEventConverter.cc  mpw3PreprocessedEvent2StdEventConverter.cc  mpw3Producer.cxx  tluDebugFileWriter.cc
user/rd50_mpw3/module/tools/: ChannelSubscription.h  Defs.cpp  Error_t.cpp  Error_t.h  Logger.cpp  ProcessVariable.h  Request_t.h  RingBuffer_t.h  Storage_t.h  TCPConnector.h  TCPStream.cpp  TicketLock.h  TimeStamp.cpp  UDPStream.h  UpdateLock.h
user/rd50_mpw3/module/tools/unused/: DBRInfoStream.cpp  PSChannel.cpp
