aux_source_directory(src MODULE_SRC)
INCLUDE_DIRECTORIES(include)
aux_source_directory(tools TOOLS_SRC)
#INCLUDE_DIRECTORIES(tools/include)

#FIND_PACKAGE(Peary REQUIRED)

ADD_LIBRARY(${EUDAQ_MODULE} SHARED ${MODULE_SRC} ${TOOLS_SRC})
TARGET_LINK_LIBRARIES(${EUDAQ_MODULE} PUBLIC ${EUDAQ_CORE_LIBRARY})
#target_link_libraries(${EUDAQ_MODULE} PRIVATE Caribou::peary Caribou::devices)
#TARGET_INCLUDE_DIRECTORIES(${EUDAQ_MODULE} SYSTEM PRIVATE ${Peary_INCLUDE_DIRS})


install(TARGETS
  ${EUDAQ_MODULE}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
